--- a/apps/employees/package.json
+++ b/apps/employees/package.json
@@ -12,15 +12,15 @@
   },
   "dependencies": {
     "@acme/db": "*",
-    "@acme/tailwind-config": "*",
-    "@next-auth/prisma-adapter": "^1.0.5",
+    "@acme/tailwind": "*",
+    "@acme/ui": "*",
+    "@auth0/nextjs-auth0": "^2.0.0",
     "@tanstack/react-query": "^4.16.1",
     "@trpc/client": "^10.1.0",
     "@trpc/next": "^10.1.0",
     "@trpc/react-query": "^10.1.0",
     "@trpc/server": "^10.1.0",
     "next": "^13.0.5",
-    "next-auth": "^4.18.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.9.1",
@@ -30,11 +30,8 @@
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
-    "autoprefixer": "^10.4.13",
     "eslint": "^8.28.0",
     "eslint-config-next": "13.0.4",
-    "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3"
   }
 }
