--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "turbo": "^1.5.5",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "flowbite": "^1.5.4",
+    "flowbite-react": "^0.3.6"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
