--- a/turbo.json
+++ b/turbo.json
@@ -15,7 +15,7 @@
     },
     "build": {
       "dependsOn": ["^build", "^db-generate"],
-      "outputs": [".next/**", ".expo/**"]
+      "outputs": [".next/**"]
     },
     "lint": {
       "outputs": []
@@ -31,5 +31,14 @@
       "cache": false
     }
   },
-  "globalEnv": ["DATABASE_URL", "NEXTAUTH_SECRET", "NEXTAUTH_URL"]
+  "globalEnv": [
+    "DATABASE_URL",
+    "NEXTAUTH_SECRET",
+    "NEXTAUTH_URL",
+    "AUTH0_CLIENT_ID",
+    "AUTH_CLIENT_SECRET",
+    "AUTH0_AUDIENCE",
+    "AUTH0_ISSUER_BASE_URL",
+    "AUTH0_BASE_URL"
+  ]
 }
