--- a/apps/distributors/package.json
+++ b/apps/distributors/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "employees",
+  "name": "distributors",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
     "clean": "rm -rf .next .turbo node_modules",
     "start": "next start",
@@ -15,17 +14,14 @@
     "@acme/tailwind": "*",
     "@acme/ui": "*",
     "@auth0/nextjs-auth0": "^2.0.0",
-    "@hookform/resolvers": "^2.9.10",
     "@tanstack/react-query": "^4.16.1",
     "@trpc/client": "^10.1.0",
     "@trpc/next": "^10.1.0",
-    "@trpc/react-query": "10.4.3",
+    "@trpc/react-query": "^10.1.0",
     "@trpc/server": "^10.1.0",
-    "dayjs": "^1.11.6",
     "next": "^13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.40.0",
     "superjson": "^1.9.1",
     "zod": "^3.18.0"
   },
