--- a/apps/employees/package.json
+++ b/apps/employees/package.json
@@ -15,6 +15,7 @@
     "@acme/tailwind": "*",
     "@acme/ui": "*",
     "@auth0/nextjs-auth0": "^2.0.0",
+    "@heroicons/react": "^2.0.13",
     "@hookform/resolvers": "^2.9.10",
     "@tanstack/react-query": "^4.16.1",
     "@trpc/client": "^10.1.0",
@@ -22,10 +23,12 @@
     "@trpc/react-query": "10.4.3",
     "@trpc/server": "^10.1.0",
     "dayjs": "^1.11.6",
+    "decimal.js": "^10.4.3",
     "next": "^13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.40.0",
+    "react-use": "^17.4.0",
     "superjson": "^1.9.1",
     "zod": "^3.18.0"
   },
