--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "rm -rf node_modules",
     "clean:workspaces": "turbo clean",
     "db-generate": "turbo db-generate",
-    "db-push": "turbo db-push",
+    "db-migrate-dev": "turbo db-migrate-dev",
+    "db-migrate": "turbo db-migrate",
     "dev": "turbo dev --parallel",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "lint": "turbo lint && manypkg check",
@@ -21,13 +22,13 @@
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "turbo": "^1.5.5",
-    "typescript": "^4.9.3",
     "flowbite": "^1.5.4",
     "flowbite-react": "^0.3.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.3"
   }
 }
