--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,7 +12,6 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "eslint": "7.32.0",
-    "react": "18.2.0",
-    "typescript": "4.9.3"
+    "react": "18.2.0"
   }
 }
