--- a/apps/employees/package.json
+++ b/apps/employees/package.json
@@ -14,29 +14,29 @@
     "@acme/db": "*",
     "@acme/tailwind": "*",
     "@acme/ui": "*",
-    "@auth0/nextjs-auth0": "^2.0.0",
-    "@heroicons/react": "^2.0.13",
-    "@hookform/resolvers": "^2.9.10",
-    "@tanstack/react-query": "^4.16.1",
-    "@trpc/client": "^10.1.0",
-    "@trpc/next": "^10.1.0",
-    "@trpc/react-query": "10.4.3",
-    "@trpc/server": "^10.1.0",
-    "dayjs": "^1.11.6",
-    "decimal.js": "^10.4.3",
-    "next": "^13.0.5",
+    "@auth0/nextjs-auth0": "2.0.1",
+    "@heroicons/react": "2.0.13",
+    "@hookform/resolvers": "2.9.10",
+    "@tanstack/react-query": "4.20.9",
+    "@trpc/client": "10.7.0",
+    "@trpc/next": "10.7.0",
+    "@trpc/react-query": "10.7.0",
+    "@trpc/server": "10.7.0",
+    "dayjs": "1.11.7",
+    "decimal.js": "10.4.3",
+    "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.40.0",
-    "react-use": "^17.4.0",
-    "superjson": "^1.9.1",
-    "zod": "^3.18.0"
+    "react-hook-form": "7.41.5",
+    "react-use": "17.4.0",
+    "superjson": "1.12.1",
+    "zod": "3.20.2"
   },
   "devDependencies": {
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9",
-    "eslint": "^8.28.0",
-    "eslint-config-next": "13.0.4"
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
+    "eslint": "8.31.0",
+    "eslint-config-next": "13.1.1"
   }
 }
