--- a/package.json
+++ b/package.json
@@ -15,20 +15,20 @@
     "type-check": "turbo type-check"
   },
   "dependencies": {
-    "@manypkg/cli": "^0.19.2",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
-    "eslint": "^8.28.0",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "turbo": "^1.5.5",
-    "flowbite": "^1.5.4",
-    "flowbite-react": "^0.3.6"
+    "@manypkg/cli": "0.19.2",
+    "@typescript-eslint/eslint-plugin": "5.48.0",
+    "@typescript-eslint/parser": "5.48.0",
+    "eslint": "8.31.0",
+    "prettier": "2.8.1",
+    "prettier-plugin-tailwindcss": "0.2.1",
+    "turbo": "1.6.3",
+    "flowbite": "1.6.0",
+    "flowbite-react": "0.3.7"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3"
+    "autoprefixer": "10.4.13",
+    "postcss": "8.4.20",
+    "tailwindcss": "3.2.4",
+    "typescript": "4.9.4"
   }
 }
