--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -11,7 +11,7 @@
     "db-generate": "pnpm with-env prisma generate",
     "db-migrate-dev": "pnpm with-env prisma migrate dev",
     "db-migrate-dev-reset": "pnpm with-env prisma migrate reset",
-    "db-migrate": "pnpm with-env prisma migrate deploy",
+    "db-migrate": "pnpm prisma migrate deploy",
     "start": "pnpm with-env prisma migrate deploy"
   },
   "dependencies": {
