--- a/apps/employees/package.json
+++ b/apps/employees/package.json
@@ -25,11 +25,13 @@
     "dayjs": "1.11.7",
     "decimal.js": "10.4.3",
     "next": "13.1.1",
+    "next-query-params": "4.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.41.5",
     "react-use": "17.4.0",
     "superjson": "1.12.1",
+    "use-query-params": "2.1.2",
     "zod": "3.20.2"
   },
   "devDependencies": {
