--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-t3-turbo",
+  "name": "ekosystem-coal-distribution",
   "private": true,
   "packageManager": "pnpm@7.13.0",
   "scripts": {
@@ -16,22 +16,20 @@
   },
   "dependencies": {
     "@heroicons/react": "2.0.13",
-    "flowbite-react": "0.3.7",
-    "flowbite": "1.6.0",
-    "next-query-params": "4.1.0",
-    "use-query-params": "2.1.2"
-  },
-  "devDependencies": {
     "@manypkg/cli": "0.19.2",
     "@typescript-eslint/eslint-plugin": "5.48.0",
     "@typescript-eslint/parser": "5.48.0",
     "autoprefixer": "10.4.13",
     "eslint": "8.31.0",
+    "flowbite-react": "0.3.7",
+    "flowbite": "1.6.0",
+    "next-query-params": "4.1.0",
     "postcss": "8.4.20",
     "prettier-plugin-tailwindcss": "0.2.1",
     "prettier": "2.8.1",
     "tailwindcss": "3.2.4",
     "turbo": "1.6.3",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "use-query-params": "2.1.2"
   }
 }
