--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/ui",
+  "name": "@ekosystem/ui",
   "version": "0.0.0",
   "main": "./index.tsx",
   "types": "./index.tsx",
@@ -8,7 +8,7 @@
     "lint": "eslint *.ts*"
   },
   "devDependencies": {
-    "@acme/tailwind": "*",
+    "@ekosystem/tailwind": "*",
     "@types/react-dom": "18.0.10",
     "@types/react": "18.0.26",
     "eslint": "8.31.0",
