--- a/.github/workflows/migrate-prod.yml
+++ b/.github/workflows/migrate-prod.yml
@@ -1,4 +1,4 @@
-name: prisma migrate
+name: migrate db prod
 on:
   push:
     branches:
@@ -29,4 +29,4 @@ jobs:
         run: pnpm install
       - run: pnpm db-migrate
         env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL_PROD }}
