--- a/apps/distributors/package.json
+++ b/apps/distributors/package.json
@@ -11,12 +11,13 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "2.0.1",
     "@ekosystem/db": "*",
     "@ekosystem/tailwind": "*",
     "@ekosystem/ui": "*",
-    "@auth0/nextjs-auth0": "2.0.1",
     "@heroicons/react": "2.0.13",
     "@hookform/resolvers": "2.9.10",
+    "@sentry/nextjs": "7.30.0",
     "@tanstack/react-query": "4.20.9",
     "@trpc/client": "10.7.0",
     "@trpc/next": "10.7.0",
