--- a/apps/employees/package.json
+++ b/apps/employees/package.json
@@ -17,6 +17,7 @@
     "@ekosystem/ui": "*",
     "@heroicons/react": "2.0.13",
     "@hookform/resolvers": "2.9.10",
+    "@sentry/nextjs": "7.30.0",
     "@tanstack/react-query": "4.20.9",
     "@trpc/client": "10.7.0",
     "@trpc/next": "10.7.0",
