--- a/apps/employees/package.json
+++ b/apps/employees/package.json
@@ -1,6 +1,5 @@
 {
   "name": "employees",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -25,6 +24,7 @@
     "@trpc/server": "10.7.0",
     "dayjs": "1.11.7",
     "decimal.js": "10.4.3",
+    "js-base64": "3.7.4",
     "next": "13.1.1",
     "next-query-params": "4.1.0",
     "react": "18.2.0",
@@ -33,7 +33,8 @@
     "react-use": "17.4.0",
     "superjson": "1.12.1",
     "use-query-params": "2.1.2",
-    "zod": "3.20.2"
+    "zod": "3.20.2",
+    "zod-error": "1.1.0"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
