--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@ekosystem/tailwind": "*",
+    "@ekosystem/db": "*",
     "@types/react-dom": "18.0.10",
     "@types/react": "18.0.26",
     "eslint": "8.31.0",
