--- a/apps/employees/package.json
+++ b/apps/employees/package.json
@@ -24,17 +24,20 @@
     "@trpc/server": "10.7.0",
     "dayjs": "1.11.7",
     "decimal.js": "10.4.3",
+    "distinct-colors": "3.0.0",
     "js-base64": "3.7.4",
-    "next": "13.1.1",
     "next-query-params": "4.1.0",
-    "react": "18.2.0",
+    "next": "13.1.1",
     "react-dom": "18.2.0",
     "react-hook-form": "7.41.5",
     "react-use": "17.4.0",
+    "react": "18.2.0",
+    "recharts": "2.4.3",
+    "remeda": "1.8.1",
     "superjson": "1.12.1",
     "use-query-params": "2.1.2",
-    "zod": "3.20.2",
-    "zod-error": "1.1.0"
+    "zod-error": "1.1.0",
+    "zod": "3.20.2"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
