--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "packageManager": "pnpm@7.13.0",
   "scripts": {
     "build": "turbo build",
-    "clean": "rm -rf node_modules",
+    "clean": "rm -rf node_modules && rm -rf ./*/**/node_modules && rm -rf ./*/**/.next && rm -rf ./*/**/.swc && rm -rf ./*/**/.turbo",
     "clean:workspaces": "turbo clean",
     "db-generate": "turbo db-generate",
     "db-migrate-dev": "turbo db-migrate-dev",
@@ -21,12 +21,12 @@
     "@typescript-eslint/parser": "5.48.0",
     "autoprefixer": "10.4.13",
     "eslint": "8.31.0",
-    "flowbite-react": "0.3.7",
     "flowbite": "1.6.0",
+    "flowbite-react": "0.3.7",
     "next-query-params": "4.1.0",
     "postcss": "8.4.20",
-    "prettier-plugin-tailwindcss": "0.2.1",
     "prettier": "2.8.1",
+    "prettier-plugin-tailwindcss": "0.2.1",
     "tailwindcss": "3.2.4",
     "turbo": "1.6.3",
     "typescript": "4.9.4",
