--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "18.0.10",
     "@types/react": "18.0.26",
     "eslint": "8.31.0",
-    "react": "18.2.0"
+    "react": "18.2.0",
+    "react-use": "17.4.0"
   }
 }
