--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "prettier": "2.8.1",
     "prettier-plugin-tailwindcss": "0.2.1",
     "tailwindcss": "3.2.4",
-    "turbo": "1.6.3",
+    "turbo": "latest",
     "typescript": "4.9.4",
     "use-query-params": "2.1.2"
   }
